--- a/page1.css
+++ b/page1.css
@@ -1,22 +1,34 @@
+*{
+    margin: auto;
+}
+
 body{
    background-color:#C8C8C8;
-   padding: 50px;
    font-family: 'Roboto', sans-serif;
+   margin:0px 90px 0px 90px; 
+}
+body p{
+    margin-top: 20px;
 }
 
 h1{
     text-align: center;
     font-family: 'Libre Baskerville', serif;
+    font-size: 70px;
+    padding-top: 20px;
+    
 }
 
 h2{
     font-family: 'Libre Baskerville', serif;
-    color: red;
+    color: #cf0025;
+    margin-top: 20px;
 }
 caption{
     margin-bottom: 2%;
+    margin-top: 20px;
     text-align: left;
-    color: red;
+    color:#cf0025;
     font-size: 30px;
     font-weight: bold;
     font-family: 'Libre Baskerville', serif;
@@ -44,7 +56,7 @@ tr:nth-child(2n){
 }
 
 a{ 
-    color: red;
+    color: #cf0025;
     font-weight: bold;
  
     
@@ -57,34 +69,37 @@ p {
 }
 
 figure{
-    border: 5px solid red;
+    border: 5px solid #cf0025;
     background-color: #333333;
     border-radius: 10px;
-    width: 1155px;
+    width: 1098px;
     margin-left: 0;
     margin-right: 0 ;
+    margin-top: 10px;
+    text-align: center;      
 }
-
-img{
-    
-    max-width: 90%;
-    padding: 50px;
-}
-
+   
 figcaption{
     color: white;
+    font-weight: bold; 
+    font-size: 20px;
     font-style: italic;
-    font-weight: bold;
-    text-align: center;
+
+}
+img{
+    max-width: 90%;
+    padding: 20px;  
 }
 
+
+
 .para{
-    border: 2px dashed blue;
+    border: 2px dashed #6000B0;
     line-height: 2;
     padding: 25px;
     margin: 25px;
     background-color:#B7B7B7;
-    color: blue;
+    color: #6000B0;
 }
 
 .center {
